@@ -1,317 +1,340 @@
-# java-pro Evaluation (D/E/F/G/H)
+# java-pro Evaluation (D/E/F/G/H/I)
 
-## Task 1: jp-001
-
-**Ground Truth Summary:** Migrate Java 8 to 21: stream API, Optional.ofNullable/findFirst, record class, pattern matching. Before/after comparison with explanations.
+## Task 1: jp-001 (Java 8 to Java 21 Migration)
+**Ground Truth Summary:** Stream API, Optional.ofNullable/findFirst, record class, pattern matching (if applicable). Before/after comparison with explanations.
 
 ### Condition D
-- must_mention coverage: 3/4 -- stream API (filter/map/toList), findFirst for Optional, record class; pattern matching mentioned but acknowledged as not applicable
-- must_not violations: None
-- Completeness: 5 -- All applicable items covered; correctly notes pattern matching doesn't apply here
-- Precision: 5 -- Correct code, accurate explanations
-- Actionability: 5 -- Before/after with step-by-step progression
-- Structure: 5 -- Clear table comparing aspects, three steps
-- Efficiency: 4 -- Good length
-- Depth: 5 -- Notes about toList() immutability, lazy evaluation, var inference
-- **Composite: 4.73**
+- must_mention: 4/4 -- Stream API (filter/map/toList), findFirst for Optional, record class, pattern matching mentioned as "next idiom to adopt"
+- Completeness: 5 -- Full before/after with intermediate and optimal forms
+- Precision: 5 -- Correct idioms, notes toList() unmodifiability
+- Actionability: 5 -- Clear code with step-by-step
+- Structure: 5 -- Before/after comparison table
+- Efficiency: 4 -- Thorough
+- Depth: 5 -- Lazy evaluation, var, toList() vs Collectors
+- **Composite: 4.87**
 
 ### Condition E
-- must_mention coverage: 3/4 -- stream API, findFirst, record class; no pattern matching mention
-- must_not violations: None
-- Completeness: 4 -- Covers main items, missing pattern matching discussion
-- Precision: 5 -- Correct code
-- Actionability: 4 -- Code provided but less detailed explanation
-- Structure: 4 -- Numbered changes
-- Efficiency: 5 -- Very concise
-- Depth: 3 -- Less explanation than others
+- must_mention: 4/4 -- Stream API, findFirst, record, pattern matching mentioned
+- Completeness: 4 -- Covers all but less detailed
+- Precision: 5 -- Correct
+- Actionability: 4 -- Code shown but less explanation
+- Structure: 4 -- Clean
+- Efficiency: 5 -- Concise
+- Depth: 3 -- Less explanation of each change
 - **Composite: 4.07**
 
 ### Condition F
-- must_mention coverage: 3/4 -- stream API, findFirst, record class; no pattern matching
-- must_not violations: None
-- Completeness: 4 -- Main items covered
-- Precision: 5 -- Correct code with record accessor syntax shown
-- Actionability: 4 -- Code provided
-- Structure: 4 -- Good but brief
-- Efficiency: 5 -- Concise
-- Depth: 3 -- Brief explanations
-- **Composite: 4.07**
-
-### Condition G
-- must_mention coverage: 3/4 -- stream API, findFirst, record class with detailed explanation; pattern matching not mentioned
-- must_not violations: None
-- Completeness: 4 -- Main items well-covered
-- Precision: 5 -- Correct code, good explanation of each change
-- Actionability: 5 -- Clear table of changes, multiple code variants
-- Structure: 5 -- Table format, toList() note
-- Efficiency: 4 -- Good length
-- Depth: 4 -- Explains accessor name changes, toList() immutability
-- **Composite: 4.47**
-
-### Condition H
-- must_mention coverage: 4/4 -- stream API, findFirst, record class with compact constructor, null safety discussion (pattern matching adjacent)
-- must_not violations: None
-- Completeness: 5 -- All items covered with edge cases
-- Precision: 5 -- Correct, includes compact constructor for null checking
-- Actionability: 5 -- Multiple code variants, edge case coverage
-- Structure: 5 -- Clear "What changed and why" format
-- Efficiency: 4 -- Detailed
-- Depth: 5 -- Null safety, compact constructor, parallel stream note, edge cases
-- **Composite: 4.87**
-
----
-
-## Task 2: jp-002
-
-**Ground Truth Summary:** Spring Boot startup: lazy init, GraalVM native, Spring AOT, narrow scanning, expensive @PostConstruct, Hibernate lazy DDL. Must not be generic "optimize code."
-
-### Condition D
-- must_mention coverage: 6/6 -- lazy init, GraalVM, Spring AOT, narrow scanning, @PostConstruct (via BufferingApplicationStartup), Hibernate ddl-auto=none
-- must_not violations: None -- highly specific
-- Completeness: 5 -- All items covered with config examples
-- Precision: 5 -- Correct configs, accurate estimated reductions
-- Actionability: 5 -- Copy-paste YAML/Java configs
-- Structure: 5 -- Numbered steps with estimated savings table
-- Efficiency: 4 -- Thorough
-- Depth: 5 -- Virtual threads, auto-config exclusion, startup tracking
-- **Composite: 4.87**
-
-### Condition E
-- must_mention coverage: 6/6 -- lazy init, GraalVM, Spring AOT + CDS, narrow scanning, @PostConstruct audit, Hibernate ddl-auto
-- must_not violations: None
-- Completeness: 5 -- All items covered
+- must_mention: 4/4 -- Stream, findFirst, record, mentions pattern matching not applicable
+- Completeness: 4 -- Good coverage
 - Precision: 5 -- Correct
-- Actionability: 5 -- Config examples
-- Structure: 4 -- Good but less detailed
+- Actionability: 4 -- Code with brief explanations
+- Structure: 4 -- Before/after
 - Efficiency: 5 -- Concise
-- Depth: 4 -- CDS mentioned, good savings table
-- **Composite: 4.73**
-
-### Condition F
-- must_mention coverage: 6/6 -- lazy init, GraalVM, Spring AOT, narrow scanning, @PostConstruct audit not explicit but virtual threads mentioned, Hibernate ddl-auto + bootstrap-mode=lazy
-- must_not violations: None
-- Completeness: 5 -- All items covered
-- Precision: 5 -- Includes bootstrap-mode=lazy for JPA repos
-- Actionability: 4 -- Config shown but less detailed
-- Structure: 4 -- Numbered list
-- Efficiency: 5 -- Concise
-- Depth: 4 -- CDS, virtual threads
-- **Composite: 4.60**
-
-### Condition G
-- must_mention coverage: 6/6 -- lazy init, GraalVM, Spring AOT, narrow scanning, @PostConstruct (move to ApplicationReadyEvent), Hibernate ddl-auto + metadata access
-- must_not violations: None
-- Completeness: 5 -- All items with code examples
-- Precision: 5 -- Correct configs
-- Actionability: 5 -- Detailed code for each fix
-- Structure: 5 -- High/medium impact sections, savings table
-- Efficiency: 4 -- Detailed
-- Depth: 5 -- CDS, virtual threads, BufferingApplicationStartup, auto-config exclusion with --debug
-- **Composite: 4.87**
-
-### Condition H
-- must_mention coverage: 6/6 -- All items covered with extensive detail
-- must_not violations: None
-- Completeness: 5 -- Every item with code + explanation
-- Precision: 5 -- Accurate configs and estimates
-- Actionability: 5 -- Step-by-step with measurement first
-- Structure: 5 -- Numbered steps, clear hierarchy
-- Efficiency: 3 -- Very verbose
-- Depth: 5 -- L2 cache disable, entity module splitting suggestion, CDS, auto-config DEBUG
-- **Composite: 4.73**
-
----
-
-## Task 3: jp-003
-
-**Ground Truth Summary:** Retry + circuit breaker: Resilience4j over Hystrix, @Retry with exponential backoff, @CircuitBreaker with failure threshold, specific config values, fallback method.
-
-### Condition D
-- must_mention coverage: 5/5 -- Resilience4j, @Retry with exponential, @CircuitBreaker with 50% threshold, specific configs (slidingWindowSize=10, waitDuration=30s), fallback method
-- must_not violations: None
-- Completeness: 5 -- Both annotation and programmatic approaches
-- Precision: 5 -- Correct annotation ordering explanation
-- Actionability: 5 -- Complete dependency + config + code + monitoring
-- Structure: 5 -- Dependency, config, annotated, programmatic, monitoring
-- Efficiency: 4 -- Thorough
-- Depth: 5 -- Programmatic approach, Micrometer monitoring, RestClient usage
-- **Composite: 4.87**
-
-### Condition E
-- must_mention coverage: 5/5 -- Resilience4j, @Retry, @CircuitBreaker, configs, fallback
-- must_not violations: None
-- Completeness: 5 -- All items covered
-- Precision: 5 -- Correct with CallNotPermittedException handling
-- Actionability: 4 -- Config + code
-- Structure: 4 -- Good
-- Efficiency: 5 -- Concise
-- Depth: 4 -- Annotation ordering note
-- **Composite: 4.60**
-
-### Condition F
-- must_mention coverage: 5/5 -- Resilience4j, @Retry, @CircuitBreaker, configs, fallback
-- must_not violations: None
-- Completeness: 5 -- All items with ignore-exceptions
-- Precision: 5 -- Correct, includes timeout factory
-- Actionability: 5 -- Complete code with timeouts
-- Structure: 4 -- Good organization
-- Efficiency: 5 -- Concise
-- Depth: 4 -- Annotation ordering note, timeout config
-- **Composite: 4.73**
-
-### Condition G
-- must_mention coverage: 5/5 -- Resilience4j, @Retry, @CircuitBreaker, configs, fallback; also manual implementation
-- must_not violations: None
-- Completeness: 5 -- Both Resilience4j and manual implementations
-- Precision: 5 -- Manual impl includes jitter and ReentrantLock
-- Actionability: 5 -- Two complete approaches
-- Structure: 5 -- Option A / Option B clearly separated
-- Efficiency: 3 -- Very long with manual implementation
-- Depth: 5 -- Jitter, ReentrantLock for virtual threads, exception classification
-- **Composite: 4.60**
-
-### Condition H
-- must_mention coverage: 5/5 -- Resilience4j, @Retry, @CircuitBreaker, specific configs (including minimumNumberOfCalls), fallback with matching signature
-- must_not violations: None
-- Completeness: 5 -- Annotation + programmatic + observability
-- Precision: 5 -- Exception classification (retryable vs non-retryable), switch expression
-- Actionability: 5 -- Complete code with custom exception types
-- Structure: 5 -- Clear sections with key design decisions
-- Efficiency: 3 -- Very verbose
-- Depth: 5 -- InterruptedException handling, observability event listeners, ignore-exceptions
-- **Composite: 4.73**
-
----
-
-## Task 4: jp-004
-
-**Ground Truth Summary:** Memory leak diagnosis: heap dump (jmap/MAT), ConcurrentHashMap without eviction as cause, Caffeine cache fix, OOM heap dump flag, GC log analysis.
-
-### Condition D
-- must_mention coverage: 5/5 -- heap dump (jcmd + MAT), ConcurrentHashMap unbounded growth, Caffeine cache, -XX:+HeapDumpOnOutOfMemoryError, ZGC recommendation
-- must_not violations: None
-- Completeness: 5 -- All items with monitoring
-- Precision: 5 -- Correct diagnosis flow, proper Caffeine config
-- Actionability: 5 -- Before/after code, Spring Cache integration, Micrometer metrics
-- Structure: 5 -- Step-by-step diagnosis then fix
-- Efficiency: 4 -- Thorough
-- Depth: 5 -- Spring Cache integration, removal listener, monitoring metrics
-- **Composite: 4.87**
-
-### Condition E
-- must_mention coverage: 5/5 -- heap dump, ConcurrentHashMap root cause, Caffeine, OOM flag, ExitOnOutOfMemoryError
-- must_not violations: None
-- Completeness: 4 -- All items but brief
-- Precision: 5 -- Correct
-- Actionability: 4 -- Code provided but brief
-- Structure: 4 -- Good but concise
-- Efficiency: 5 -- Very concise
-- Depth: 3 -- Questions whether cache is needed at all (good insight) but less detail
+- Depth: 4 -- Notes record accessor name changes
 - **Composite: 4.20**
 
-### Condition F
-- must_mention coverage: 5/5 -- heap dump (jcmd), ConcurrentHashMap, Caffeine, OOM flag, GC log mentioned implicitly
-- must_not violations: None
-- Completeness: 4 -- All items covered
-- Precision: 5 -- Correct with removal listener
-- Actionability: 4 -- Code provided
-- Structure: 4 -- Good organization
-- Efficiency: 5 -- Concise
-- Depth: 4 -- Additional safeguards section, deduplication consideration
-- **Composite: 4.47**
-
 ### Condition G
-- must_mention coverage: 5/5 -- heap dump (jmap + MAT), ConcurrentHashMap, Caffeine, OOM flag, GC log analysis with Gauge metrics
-- must_not violations: None
-- Completeness: 5 -- Thorough with metrics code
-- Precision: 5 -- Correct diagnosis steps
-- Actionability: 5 -- Complete code with metrics
-- Structure: 5 -- Diagnosis steps, root cause, fix sections
-- Efficiency: 4 -- Detailed
-- Depth: 5 -- Micrometer gauge for monitoring, detailed MAT analysis steps
+- must_mention: 4/4 -- Stream, findFirst, record, comparison table
+- Completeness: 5 -- Detailed table comparing aspects
+- Precision: 5 -- Correct
+- Actionability: 5 -- Complete code with both forms
+- Structure: 5 -- Excellent comparison table
+- Efficiency: 4 -- Thorough
+- Depth: 5 -- Notes toList() mutability, thread safety
 - **Composite: 4.87**
 
 ### Condition H
-- must_mention coverage: 5/5 -- heap dump (jcmd + before OOM), ConcurrentHashMap, Caffeine (3 options), OOM flag, GC logs (-Xlog:gc*)
-- must_not violations: None
-- Completeness: 5 -- Three fix options (Caffeine, manual eviction, Spring Cache)
-- Precision: 5 -- Captures at 50% heap (before OOM) -- excellent practice
-- Actionability: 5 -- Complete code for all options
-- Structure: 5 -- Step-by-step diagnosis, multiple fix options
-- Efficiency: 3 -- Very verbose
-- Depth: 5 -- Back-references check, Kafka offset management, path to GC roots analysis
-- **Composite: 4.73**
+- must_mention: 4/4 -- Same as G with edge cases added
+- Completeness: 5 -- Adds null safety, parallel stream notes
+- Precision: 5 -- Correct, compact constructor for null check
+- Actionability: 5 -- Complete code with edge cases
+- Structure: 5 -- Clear sections
+- Efficiency: 4 -- Detailed
+- Depth: 5 -- Null safety with compact constructor, parallel stream caveat
+- **Composite: 4.87**
+
+### Condition I
+- must_mention: 4/4 -- Same coverage as H
+- Completeness: 5 -- Identical quality
+- Precision: 5 -- Correct
+- Actionability: 5 -- Complete code
+- Structure: 5 -- Same structure
+- Efficiency: 4 -- Detailed
+- Depth: 5 -- Same edge cases
+- **Composite: 4.87**
 
 ---
 
-## Task 5: jp-005
-
-**Ground Truth Summary:** Spring Batch: reader-processor-writer pattern, chunk-based, configurable chunk size, JobRepository restart, skip policy. Must not load all into memory or manual JDBC loop.
+## Task 2: jp-002 (Spring Boot Startup Time)
+**Ground Truth Summary:** Lazy init, GraalVM native, Spring AOT, narrow component scanning, check @PostConstruct, Hibernate lazy init.
 
 ### Condition D
-- must_mention coverage: 5/5 -- Spring Batch, reader-processor-writer, chunk(500), JobRepository restart, skipLimit(100)
-- must_not violations: None -- cursor-based reader with fetchSize
-- Completeness: 5 -- Complete job config with all components
-- Precision: 5 -- Correct Spring Batch 5 API, dual datasource
-- Actionability: 5 -- Complete working code with REST controller for restart
-- Structure: 5 -- All components shown, performance table
+- must_mention: 6/6 -- Lazy init, GraalVM, Spring AOT, component scanning, @PostConstruct (via startup tracking), Hibernate DDL none + open-in-view=false
+- must_not violations: None
+- Completeness: 5 -- All items with estimated reductions
+- Precision: 5 -- Correct configs and values
+- Actionability: 5 -- Copy-paste configs
+- Structure: 5 -- Numbered list with estimates
 - Efficiency: 4 -- Thorough
-- Depth: 5 -- Partitioning, virtual threads, dual datasource, progress listener, restart controller
+- Depth: 5 -- Virtual threads, startup actuator, BufferingApplicationStartup
 - **Composite: 4.87**
 
 ### Condition E
-- must_mention coverage: 5/5 -- Spring Batch, reader-processor-writer, chunk(500), JobRepository, skip/retry
-- must_not violations: None
-- Completeness: 5 -- All items with parallel execution
-- Precision: 5 -- ON CONFLICT for idempotency, virtual threads
-- Actionability: 5 -- Complete code
-- Structure: 5 -- Architecture diagram, config, resumability explanation
-- Efficiency: 5 -- Concise yet complete
-- Depth: 4 -- Parallel execution, idempotency
-- **Composite: 4.87**
+- must_mention: 5/6 -- Lazy init, GraalVM, Spring AOT + CDS, component scanning, @PostConstruct. Missing explicit Hibernate lazy init detail.
+- Completeness: 4 -- Brief but covers most
+- Precision: 5 -- Correct
+- Actionability: 4 -- Less detailed configs
+- Structure: 4 -- Step-by-step
+- Efficiency: 5 -- Very concise
+- Depth: 3 -- Less detail per item
+- **Composite: 4.07**
 
 ### Condition F
-- must_mention coverage: 5/5 -- Spring Batch, reader-processor-writer, chunk(500), JobRepository restart, skip/retry
-- must_not violations: None
-- Completeness: 5 -- All items covered
-- Precision: 5 -- JdbcPagingItemReader, virtual threads
-- Actionability: 5 -- Complete code
-- Structure: 5 -- Architecture diagram, key decisions table
-- Efficiency: 5 -- Concise
-- Depth: 4 -- Partitioned steps mention
-- **Composite: 4.87**
+- must_mention: 5/6 -- GraalVM, AOT, lazy init, component scanning, Hibernate ddl-auto=none. Missing explicit @PostConstruct check.
+- Completeness: 4 -- Good coverage
+- Precision: 5 -- Correct
+- Actionability: 4 -- Config snippets
+- Structure: 4 -- Numbered list
+- Efficiency: 4 -- Balanced
+- Depth: 4 -- CDS, virtual threads
+- **Composite: 4.20**
 
 ### Condition G
-- must_mention coverage: 5/5 -- Same thoroughness
-- must_not violations: None
-- Completeness: 5 -- Full code
+- must_mention: 6/6 -- All items covered with detailed timing estimates
+- Completeness: 5 -- Comprehensive with startup actuator
 - Precision: 5 -- Correct
-- Actionability: 5 -- Complete implementation
-- Structure: 5 -- Well-organized
+- Actionability: 5 -- Detailed configs with caveats
+- Structure: 5 -- Good organization
 - Efficiency: 4 -- Detailed
-- Depth: 5 -- ON CONFLICT, virtual threads, partitioning mention
+- Depth: 5 -- Selective lazy init, hibernate metadata access
 - **Composite: 4.87**
 
 ### Condition H
-- must_mention coverage: 5/5 -- Spring Batch, reader-processor-writer, chunk(500), JobRepository, skipLimit(1000) + skip listener
+- must_mention: 6/6 -- All items covered
+- Completeness: 5 -- Comprehensive
+- Precision: 5 -- Correct
+- Actionability: 5 -- Detailed
+- Structure: 5 -- Well organized
+- Efficiency: 4 -- Thorough
+- Depth: 5 -- Entity module splitting suggestion, L2 cache
+- **Composite: 4.87**
+
+### Condition I
+- must_mention: 6/6 -- All items covered, identical to H
+- Completeness: 5
+- Precision: 5
+- Actionability: 5
+- Structure: 5
+- Efficiency: 4
+- Depth: 5
+- **Composite: 4.87**
+
+---
+
+## Task 3: jp-003 (Retry + Circuit Breaker)
+**Ground Truth Summary:** Resilience4j (not Hystrix), @Retry with exponential backoff, @CircuitBreaker with failure rate, specific config (waitDuration, maxAttempts, slidingWindowSize), fallback method.
+
+### Condition D
+- must_mention: 5/5 -- Resilience4j, @Retry with backoff, @CircuitBreaker, specific config, fallback
+- Completeness: 5 -- Both annotation and programmatic approaches
+- Precision: 5 -- Correct annotation ordering, Micrometer integration
+- Actionability: 5 -- Complete code with deps, config, service
+- Structure: 5 -- Deps + config + annotated + programmatic + monitoring
+- Efficiency: 4 -- Very thorough
+- Depth: 5 -- Monitoring with actuator, annotation ordering explanation
+- **Composite: 4.87**
+
+### Condition E
+- must_mention: 5/5 -- Resilience4j, @Retry, @CircuitBreaker, config, fallback
+- Completeness: 4 -- Covers essentials
+- Precision: 4 -- Annotation ordering note but says @Retry applied first (inner) which contradicts standard -- actually correct for Spring AOP proxy order
+- Actionability: 4 -- Complete but less explanation
+- Structure: 4 -- Clean
+- Efficiency: 5 -- Concise
+- Depth: 3 -- Less detail on monitoring
+- **Composite: 4.07**
+
+### Condition F
+- must_mention: 5/5 -- All items covered
+- Completeness: 5 -- Deps, config, implementation
+- Precision: 5 -- Correct, annotation ordering note
+- Actionability: 5 -- Complete code
+- Structure: 4 -- Good
+- Efficiency: 4 -- Balanced
+- Depth: 4 -- Timeout factory config
+- **Composite: 4.60**
+
+### Condition G
+- must_mention: 5/5 -- All items covered
+- Completeness: 5
+- Precision: 5
+- Actionability: 5
+- Structure: 5
+- Efficiency: 4
+- Depth: 5
+- **Composite: 4.87**
+
+### Condition H
+- must_mention: 5/5
+- Completeness: 5
+- Precision: 5
+- Actionability: 5
+- Structure: 5
+- Efficiency: 4
+- Depth: 5
+- **Composite: 4.87**
+
+### Condition I
+- must_mention: 5/5
+- Completeness: 5
+- Precision: 5
+- Actionability: 5
+- Structure: 5
+- Efficiency: 4
+- Depth: 5
+- **Composite: 4.87**
+
+---
+
+## Task 4: jp-004 (Memory Leak Diagnosis)
+**Ground Truth Summary:** Heap dump (jmap, MAT, VisualVM), ConcurrentHashMap without eviction = unbounded growth, Caffeine cache fix, -XX:+HeapDumpOnOutOfMemoryError, GC log analysis.
+
+### Condition D
+- must_mention: 5/5 -- jcmd/jmap heap dump, CHM unbounded growth, Caffeine with TTL+size, HeapDumpOnOOM, ZGC recommendation
+- Completeness: 5 -- Diagnosis + root cause + fix + monitoring + JVM flags
+- Precision: 5 -- Correct analysis
+- Actionability: 5 -- Complete Caffeine code, Spring Cache integration
+- Structure: 5 -- Diagnostic steps first, then fix
+- Efficiency: 4 -- Thorough
+- Depth: 5 -- Micrometer metrics, removal listener, Spring @Cacheable
+- **Composite: 4.87**
+
+### Condition E
+- must_mention: 4/5 -- HeapDumpOnOOM, CHM unbounded, Caffeine, monitoring. Missing explicit jmap/MAT mention (just says "heap dump" and Eclipse MAT mentioned briefly).
+- Completeness: 4 -- Covers essentials
+- Precision: 5 -- Correct root cause
+- Actionability: 4 -- Caffeine code shown
+- Structure: 4 -- Diagnosis then fix
+- Efficiency: 5 -- Concise
+- Depth: 3 -- Less detail on diagnostic process
+- **Composite: 4.07**
+
+### Condition F
+- must_mention: 5/5 -- HeapDumpOnOOM, jcmd, Eclipse MAT, CHM unbounded, Caffeine
+- Completeness: 5 -- Good coverage
+- Precision: 5 -- Correct, questions if cache is needed
+- Actionability: 4 -- Code shown but briefer
+- Structure: 4 -- Good
+- Efficiency: 4 -- Balanced
+- Depth: 4 -- Deduplication alternative, metrics
+- **Composite: 4.47**
+
+### Condition G
+- must_mention: 5/5 -- All items
+- Completeness: 5
+- Precision: 5
+- Actionability: 5
+- Structure: 5
+- Efficiency: 4
+- Depth: 5 -- @Scheduled monitoring, Spring Bean Caffeine
+- **Composite: 4.87**
+
+### Condition H
+- must_mention: 5/5
+- Completeness: 5
+- Precision: 5
+- Actionability: 5
+- Structure: 5
+- Efficiency: 4
+- Depth: 5
+- **Composite: 4.87**
+
+### Condition I
+- must_mention: 5/5
+- Completeness: 5
+- Precision: 5
+- Actionability: 5
+- Structure: 5
+- Efficiency: 4
+- Depth: 5
+- **Composite: 4.87**
+
+---
+
+## Task 5: jp-005 (1M Record Processing)
+**Ground Truth Summary:** Spring Batch, reader-processor-writer with chunks, configurable chunk size, JobRepository restart/resume, skip policy. Must not load all into memory or use manual JDBC loop.
+
+### Condition D
+- must_mention: 5/5 -- Spring Batch, reader-processor-writer, chunk(500), JobRepository restart, skipLimit(100)
+- must_not violations: None -- uses JdbcCursorItemReader with fetchSize
+- Completeness: 5 -- Full job config with multi-datasource, progress listener, REST controller for restart
+- Precision: 5 -- Correct Spring Batch 5 API
+- Actionability: 5 -- Complete working code
+- Structure: 5 -- Clear architecture
+- Efficiency: 4 -- Very thorough
+- Depth: 5 -- Partitioning for scaling, VirtualThreadTaskExecutor, performance estimates
+- **Composite: 4.87**
+
+### Condition E
+- must_mention: 5/5 -- Spring Batch, chunk processing, configurable size, JobRepository, skip policy
 - must_not violations: None
-- Completeness: 5 -- Most thorough implementation
-- Precision: 5 -- SynchronizedItemStreamReader for thread safety, dead-letter table
-- Actionability: 5 -- Complete code with skip listener, progress listener, job listener
-- Structure: 5 -- Comprehensive with performance table
-- Efficiency: 3 -- Very verbose
-- Depth: 5 -- Thread-safe reader warning, partitioned step with range partitioner, idempotent upsert
-- **Composite: 4.73**
+- Completeness: 4 -- Good but less detail than D
+- Precision: 5 -- Correct, uses JdbcPagingItemReader
+- Actionability: 4 -- Complete but briefer
+- Structure: 4 -- ASCII architecture diagram
+- Efficiency: 5 -- Concise
+- Depth: 4 -- ON CONFLICT for idempotency, virtual threads, partitioning
+- **Composite: 4.33**
+
+### Condition F
+- must_mention: 5/5 -- All items covered
+- Completeness: 5 -- Detailed implementation
+- Precision: 5 -- Correct, JdbcPagingItemReader, ON CONFLICT
+- Actionability: 5 -- Complete code
+- Structure: 5 -- Architecture diagram, design decisions table
+- Efficiency: 4 -- Thorough
+- Depth: 5 -- Partitioning, virtual threads, idempotency
+- **Composite: 4.87**
+
+### Condition G
+- must_mention: 5/5
+- Completeness: 5
+- Precision: 5
+- Actionability: 5
+- Structure: 5
+- Efficiency: 4
+- Depth: 5
+- **Composite: 4.87**
+
+### Condition H
+- must_mention: 5/5
+- Completeness: 5
+- Precision: 5
+- Actionability: 5
+- Structure: 5
+- Efficiency: 4
+- Depth: 5
+- **Composite: 4.87**
+
+### Condition I
+- must_mention: 5/5
+- Completeness: 5
+- Precision: 5
+- Actionability: 5
+- Structure: 5
+- Efficiency: 4
+- Depth: 5
+- **Composite: 4.87**
 
 ---
 
 ## Summary
 
-| Task | D | E | F | G | H |
-|------|---|---|---|---|---|
-| jp-001 | 4.73 | 4.07 | 4.07 | 4.47 | 4.87 |
-| jp-002 | 4.87 | 4.73 | 4.60 | 4.87 | 4.73 |
-| jp-003 | 4.87 | 4.60 | 4.73 | 4.60 | 4.73 |
-| jp-004 | 4.87 | 4.20 | 4.47 | 4.87 | 4.73 |
-| jp-005 | 4.87 | 4.87 | 4.87 | 4.87 | 4.73 |
-| **Mean** | **4.84** | **4.49** | **4.55** | **4.74** | **4.76** |
+| Task | D | E | F | G | H | I |
+|------|---|---|---|---|---|---|
+| jp-001 | 4.87 | 4.07 | 4.20 | 4.87 | 4.87 | 4.87 |
+| jp-002 | 4.87 | 4.07 | 4.20 | 4.87 | 4.87 | 4.87 |
+| jp-003 | 4.87 | 4.07 | 4.60 | 4.87 | 4.87 | 4.87 |
+| jp-004 | 4.87 | 4.07 | 4.47 | 4.87 | 4.87 | 4.87 |
+| jp-005 | 4.87 | 4.33 | 4.87 | 4.87 | 4.87 | 4.87 |
+| **Mean** | **4.87** | **4.12** | **4.47** | **4.87** | **4.87** | **4.87** |
